# wtf

./: .gitignore  NOTES.md  README.md  SPEC.md
android/: README.md  build.gradle
android/src/main/: AndroidManifest.xml
assetsWtf/: WebViewJavascriptBridge.js
assetsWtf/web/: test-index-betterspeed.html  tpl_member_business.htm  ui_home.html
demo_web/web/: content.htm  root.htm  root_ace.htm  root_demo.htm  root_old.htm  test-long-iframe.html  test-long.html  ui_login.html
ios/: Wtf.h  WtfHybridWKWebViewUi.h  WtfHybridWKWebViewUi.m  WtfTools.m  WtfUi_UIViewController.h
ios/_app_lang_change/: ApiLangChange.h
ios/_app_set_topbar/: ApiSetTopbar.h
ios/_app_ui_close/: ApiUiClose.h
js/: platform.js
wtf-android/: SPEC.md  build.gradle
wtf-android/src/main/cpp/: CMakeLists.txt  wtf-lib.c  wtf-lib.cpp
wtf-ios/: JSO.h  JSO.m  JsEngineWebView.h  JsEngineWebView.m  Wtf.h  WtfApi.h  WtfApi.m  WtfCache.h  WtfCache.m  WtfHybridApi.h  WtfHybridApi.m  WtfHybridWKWebViewUi.m  WtfNativeUi.h  WtfNativeUi.m  WtfTools.h  WtfTools.m  WtfUi.h  WtfUi_UIViewController.h  WtfUi_UIViewController.m  WtfWKWebViewUi.h  WtfWKWebViewUi.m  wtf-ios.md
wtf-ios/_app_activity_set_title/: ApiUiTitle.h  ApiUiTitle.m
wtf-ios/_app_lang_change/: ApiLangChange.h  ApiLangChange.m
wtf-ios/_app_set_topbar/: ApiSetTopbar.m
wtf-ios/_app_ui_close/: ApiUiClose.h  ApiUiClose.m
wtf-ios/_app_ui_open/: ApiUiOpen.h  ApiUiOpen.m
wtf-ios/demo/: ApiDefaultInit.h  ApiDefaultInit.m  ApiLangChange.m  ApiSetTopbar.h  ApiSetTopbar.m  ApiUiClose.m  ApiUiOpen.h  ApiUiOpen.m  ApiUiTitle.h  ApiUiTitle.m
(+42 files in other folders)
